# flare

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  Cargo.toml  README.md
.forgejo/workflows/: build.yml
crates/flare/: Cargo.toml
crates/flare-cli/: Cargo.toml
crates/flare-codegen-metal/: Cargo.toml
crates/flare-codegen-metal/src/: error.rs  expr.rs  kernel.rs  lib.rs  stmt.rs  types.rs
crates/flare-ir/: Cargo.toml
crates/flare-ir/src/hir/: fusion.rs  mod.rs  program.rs  schedule.rs  types.rs
crates/flare-ir/src/mir/: core.rs  error.rs  kernel.rs  mod.rs
crates/flare-py-bindings/: Cargo.toml  pyproject.toml
crates/flare-py-bindings/src/: lib.rs
crates/flare/src/: error.rs  lib.rs
crates/flare/src/ast/: expr.rs  fusion.rs  kernel.rs  program.rs  schedule.rs  stmt.rs  types.rs
crates/flare/src/lexer/: core.rs  token.rs
crates/flare/src/parser/: core.rs  expr.rs  kernel.rs  mod.rs  stmt.rs
