[package]
name = "flare-codegen-metal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
flare = { path = "../flare" }
flare-ir = { path = "../flare-ir" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
