[package]
name = "flare-py-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
flare = { path = "../flare" }
flare-codegen-metal = { path = "../flare-codegen-metal" }
pyo3 = { version = "0.22", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.22"

[lib]
name = "flare_py_bindings"
crate-type = ["cdylib"]
